Allow for Atari export to specify a prefix for each frame of an animation

--- a/src/templates/settings/export/atari.html
+++ b/src/templates/settings/export/atari.html
@@ -12,9 +12,12 @@
 		</div>
 		<div style="display: flex; line-height: 23px;">
 			<label style="flex-shrink: 0; padding-right:5px;">Prefix</label>
-			<input type="text" style="flex: 1;" class="atari-prefix-name textfield"
-				   autocomplete="off" placeholder="Sprite name prefix ...">
-		  </div>
+			<input type="text" style="flex: 1;" class="atari-prefix-name textfield" autocomplete="off" placeholder="Sprite name prefix ...">
+		</div>
+		<div style="display: flex; line-height: 23px;">
+			<label style="flex-shrink: 0; padding-right:5px;">Frame Prefix</label>
+			<input type="text" style="flex: 1;" class="atari-frame-prefix-name textfield" autocomplete="off" placeholder="Sprite frame prefix ...">
+		</div>
 		<div class="checkbox-container" style="margin: 5px 0;">
 			<input id="asm-from-pallete-checkbox" class="asm-from-pallete-checkbox checkbox-fix" type="checkbox" />
 			<label for="asm-from-pallete-checkbox" title="Check to convert pallete index to bit plane. Uncheck for layers to bit planes." rel="tooltip"
