Added an Atari mode to the animation preview button menu. It changes the aspect ratio of the display to give a bit more square look

--- a/src/templates/preview.html
+++ b/src/templates/preview.html
@@ -5,6 +5,7 @@
         <div class="preview-disable-overlay" rel="tooltip" data-placement="left"></div>
         <div class="preview-contextual-action  original-size-button" rel="tooltip" data-placement="left">1x</div>
         <div class="preview-contextual-action  best-size-button" rel="tooltip" data-placement="left"></div>
+		<div class="preview-contextual-action  atari-size-button" rel="tooltip" data-placement="left"><img class="icon-atari-mode-white" /></div>
         <div class="preview-contextual-action  full-size-button" rel="tooltip" data-placement="left">Full</div>
       </div>
       <div class="preview-contextual-action  toggle-grid-button  icon-minimap-grid-white"
